更新 Build-SukiSU-old.yml

--- a/.github/workflows/Build-SukiSU-old.yml
+++ b/.github/workflows/Build-SukiSU-old.yml
@@ -261,7 +261,7 @@ jobs:
           tag_name: "build-${{ github.run_id }}"
           name: "OnePlus_ACE5 Build ${{ github.run_number }}"
           body: |
-            每日自动编译 SukiSU-Ultra 内核
+            每日自动编译 SukiSU-Ultra 内核old
             - 机型： 一加ACE5
             - 特性：MKSU+SUSFS+VFS+KPM
             - 编译时间: ${{ github.event.repository.updated_at }}
